--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quisquam, ipsa cupiditate nesciunt voluptatem, mollitia ipsum sunt suscipit minima quos deleniti omnis veritatis voluptas, eligendi nihil delectus libero possimus iure?</p>
 </body>
 </html>
